--- a/modules/cpu/intel/cpu_intel.csproj
+++ b/modules/cpu/intel/cpu_intel.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Api\Hardware\Sensors\Base\SensorBaseIntelCpu.cs" />
     <Compile Include="Api\Hardware\Sensors\Base\SensorBaseIntelCpuMulti.cs" />
     <Compile Include="Api\Hardware\Sensors\Base\SensorElementBaseIntelCpu.cs" />
+    <Compile Include="Api\Hardware\Sensors\Base\SensorElementBaseIntelCpuVoid.cs" />
+    <Compile Include="Api\Hardware\Sensors\SensorElementIntelCpuTemperature.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorIntelCpuCoresLoad.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorIntelCpuFrequency.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorIntelCpuPowers.cs" />
