InfluxDb fixes, settings manager for modules, ram sensors, other gpu sensor fixes, and more refactor

--- a/modules/gpu/radeon/gpu_radeon.csproj
+++ b/modules/gpu/radeon/gpu_radeon.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Api\Hardware\Sensors\SensorRadeonFanInfo.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadCoreActivity.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadEngine.cs" />
-    <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadMemory.cs" />
+    <Compile Include="Api\Hardware\Sensors\SensorRadeonMemoryClocks.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonLoadVddc.cs" />
     <Compile Include="Api\Hardware\Sensors\SensorRadeonTemperature.cs" />
     <Compile Include="Api\Helpers\LinkedDelegateAttribute.cs" />
