--- a/modules/gpu/nvidia/gpu_nvidia.csproj
+++ b/modules/gpu/nvidia/gpu_nvidia.csproj
@@ -45,6 +45,9 @@
     <Compile Include="Api\Enums\NvThermalTarget.cs" />
     <Compile Include="Api\Structures\NvDisplayHandle.cs" />
     <Compile Include="Api\Structures\NvMemoryInfo.cs" />
+    <Compile Include="Api\Structures\NvPState.cs" />
+    <Compile Include="Api\Structures\NvPStates.cs" />
+    <Compile Include="Api\Structures\NvUsages.cs" />
     <Compile Include="Hardware\NVidiaGpu.cs" />
     <Compile Include="Hardware\NVidiaGpuIdentifer.cs" />
     <Compile Include="Hardware\Sensors\Base\SensorBaseNVidiaLoad.cs" />
@@ -53,6 +56,7 @@
     <Compile Include="Hardware\Sensors\SensorNVidiaClocks.cs" />
     <Compile Include="Hardware\Sensors\SensorNVidiaMemory.cs" />
     <Compile Include="Hardware\Sensors\SensorNVidiaTemperature.cs" />
+    <Compile Include="Hardware\Sensors\SensorNVidiaLoads.cs" />
     <Compile Include="Helpers\FunctionId.cs" />
     <Compile Include="Helpers\FunctionIdAttribute.cs" />
     <Compile Include="Helpers\LinkedFunctionIdAttribute.cs" />
